autogen/edu/mit/compilers/grammar/DecafParser.java
// Generated from /home/madhav/6035-compilers/src/edu/mit/compilers/grammar/DecafParser.g4 by ANTLR 4.5.3

    package edu.mit.compilers.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DecafParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS_=1, COMMENT=2, L_SQUARE=3, R_SQUARE=4, L_PAREN=5, R_PAREN=6, L_CURL=7, 
		R_CURL=8, COMMA=9, SEMI_COL=10, LT_OP=11, GT_OP=12, LEQ_OP=13, GEQ_OP=14, 
		EQ_OP=15, NEQ_OP=16, AND_OP=17, OR_OP=18, NOT_OP=19, ADD_OP=20, SUB_OP=21, 
		MUL_OP=22, DIV_OP=23, MOD_OP=24, AS_OP=25, ADD_AS_OP=26, SUB_AS_OP=27, 
		RES_BOOL=28, RES_BREAK=29, RES_EXTERN=30, RES_CONTINUE=31, RES_ELSE=32, 
		RES_FOR=33, RES_WHILE=34, RES_IF=35, RES_INT=36, RES_RETURN=37, RES_SIZEOF=38, 
		RES_VOID=39, BOOL=40, CHAR=41, STRING=42, INT=43, ID=44, HEX_PREFIX=45;
	public static final int
		RULE_program = 0, RULE_extern_decl = 1, RULE_field_decl = 2, RULE_method_decl = 3, 
		RULE_block = 4, RULE_type = 5, RULE_statement = 6, RULE_assign_op = 7, 
		RULE_compound_assign_op = 8, RULE_method_call = 9, RULE_method_name = 10, 
		RULE_location = 11, RULE_expr = 12, RULE_extern_arg = 13, RULE_bin_op = 14, 
		RULE_arith_op = 15, RULE_rel_op = 16, RULE_eq_op = 17, RULE_cond_op = 18, 
		RULE_literal = 19;
	public static final String[] ruleNames = {
		"program", "extern_decl", "field_decl", "method_decl", "block", "type", 
		"statement", "assign_op", "compound_assign_op", "method_call", "method_name", 
		"location", "expr", "extern_arg", "bin_op", "arith_op", "rel_op", "eq_op", 
		"cond_op", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'['", "']'", "'('", "')'", "'{'", "'}'", "','", "';'", 
		"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'='", "'+='", "'-='", "'bool'", "'break'", 
		"'extern'", "'continue'", "'else'", "'for'", "'while'", "'if'", "'int'", 
		"'return'", "'sizeof'", "'void'", null, null, null, null, null, "'0x'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS_", "COMMENT", "L_SQUARE", "R_SQUARE", "L_PAREN", "R_PAREN", 
		"L_CURL", "R_CURL", "COMMA", "SEMI_COL", "LT_OP", "GT_OP", "LEQ_OP", "GEQ_OP", 
		"EQ_OP", "NEQ_OP", "AND_OP", "OR_OP", "NOT_OP", "ADD_OP", "SUB_OP", "MUL_OP", 
		"DIV_OP", "MOD_OP", "AS_OP", "ADD_AS_OP", "SUB_AS_OP", "RES_BOOL", "RES_BREAK", 
		"RES_EXTERN", "RES_CONTINUE", "RES_ELSE", "RES_FOR", "RES_WHILE", "RES_IF", 
		"RES_INT", "RES_RETURN", "RES_SIZEOF", "RES_VOID", "BOOL", "CHAR", "STRING", 
		"INT", "ID", "HEX_PREFIX"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DecafParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DecafParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<Extern_declContext> extern_decl() {
			return getRuleContexts(Extern_declContext.class);
		}
		public Extern_declContext extern_decl(int i) {
			return getRuleContext(Extern_declContext.class,i);
		}
		public List<Field_declContext> field_decl() {
			return getRuleContexts(Field_declContext.class);
		}
		public Field_declContext field_decl(int i) {
			return getRuleContext(Field_declContext.class,i);
		}
		public List<Method_declContext> method_decl() {
			return getRuleContexts(Method_declContext.class);
		}
		public Method_declContext method_decl(int i) {
			return getRuleContext(Method_declContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RES_EXTERN) {
				{
				{
				setState(40);
				extern_decl();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(46);
					field_decl();
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RES_BOOL) | (1L << RES_INT) | (1L << RES_VOID))) != 0)) {
				{
				{
				setState(52);
				method_decl();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Extern_declContext extends ParserRuleContext {
		public TerminalNode RES_EXTERN() { return getToken(DecafParser.RES_EXTERN, 0); }
		public TerminalNode ID() { return getToken(DecafParser.ID, 0); }
		public TerminalNode L_PAREN() { return getToken(DecafParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(DecafParser.R_PAREN, 0); }
		public TerminalNode SEMI_COL() { return getToken(DecafParser.SEMI_COL, 0); }
		public Extern_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extern_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterExtern_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitExtern_decl(this);
		}
	}

	public final Extern_declContext extern_decl() throws RecognitionException {
		Extern_declContext _localctx = new Extern_declContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_extern_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(RES_EXTERN);
			setState(59);
			match(ID);
			setState(60);
			match(L_PAREN);
			setState(61);
			match(R_PAREN);
			setState(62);
			match(SEMI_COL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_declContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI_COL() { return getToken(DecafParser.SEMI_COL, 0); }
		public List<TerminalNode> ID() { return getTokens(DecafParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DecafParser.ID, i);
		}
		public List<TerminalNode> L_SQUARE() { return getTokens(DecafParser.L_SQUARE); }
		public TerminalNode L_SQUARE(int i) {
			return getToken(DecafParser.L_SQUARE, i);
		}
		public List<TerminalNode> INT() { return getTokens(DecafParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(DecafParser.INT, i);
		}
		public List<TerminalNode> R_SQUARE() { return getTokens(DecafParser.R_SQUARE); }
		public TerminalNode R_SQUARE(int i) {
			return getToken(DecafParser.R_SQUARE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DecafParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DecafParser.COMMA, i);
		}
		public Field_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterField_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitField_decl(this);
		}
	}

	public final Field_declContext field_decl() throws RecognitionException {
		Field_declContext _localctx = new Field_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_field_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			type();
			setState(70);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(65);
				match(ID);
				}
				break;
			case 2:
				{
				setState(66);
				match(ID);
				setState(67);
				match(L_SQUARE);
				setState(68);
				match(INT);
				setState(69);
				match(R_SQUARE);
				}
				break;
			}
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(72);
				match(COMMA);
				setState(78);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(73);
					match(ID);
					}
					break;
				case 2:
					{
					setState(74);
					match(ID);
					setState(75);
					match(L_SQUARE);
					setState(76);
					match(INT);
					setState(77);
					match(R_SQUARE);
					}
					break;
				}
				}
				}
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			match(SEMI_COL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_declContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DecafParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DecafParser.ID, i);
		}
		public TerminalNode L_PAREN() { return getToken(DecafParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(DecafParser.R_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode RES_VOID() { return getToken(DecafParser.RES_VOID, 0); }
		public List<TerminalNode> COMMA() { return getTokens(DecafParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DecafParser.COMMA, i);
		}
		public Method_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterMethod_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitMethod_decl(this);
		}
	}

	public final Method_declContext method_decl() throws RecognitionException {
		Method_declContext _localctx = new Method_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			switch (_input.LA(1)) {
			case RES_BOOL:
			case RES_INT:
				{
				setState(87);
				type();
				}
				break;
			case RES_VOID:
				{
				setState(88);
				match(RES_VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(91);
			match(ID);
			setState(92);
			match(L_PAREN);
			setState(105);
			_la = _input.LA(1);
			if (_la==RES_BOOL || _la==RES_INT) {
				{
				{
				setState(93);
				type();
				setState(94);
				match(ID);
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(96);
					match(COMMA);
					{
					setState(97);
					type();
					setState(98);
					match(ID);
					}
					}
					}
					setState(104);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(107);
			match(R_PAREN);
			setState(108);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode L_CURL() { return getToken(DecafParser.L_CURL, 0); }
		public TerminalNode R_CURL() { return getToken(DecafParser.R_CURL, 0); }
		public List<Field_declContext> field_decl() {
			return getRuleContexts(Field_declContext.class);
		}
		public Field_declContext field_decl(int i) {
			return getRuleContext(Field_declContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(L_CURL);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==RES_BOOL || _la==RES_INT) {
				{
				{
				setState(111);
				field_decl();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RES_BREAK) | (1L << RES_CONTINUE) | (1L << RES_FOR) | (1L << RES_WHILE) | (1L << RES_IF) | (1L << RES_RETURN) | (1L << ID))) != 0)) {
				{
				{
				setState(117);
				statement();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(R_CURL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode RES_INT() { return getToken(DecafParser.RES_INT, 0); }
		public TerminalNode RES_BOOL() { return getToken(DecafParser.RES_BOOL, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !(_la==RES_BOOL || _la==RES_INT) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public Assign_opContext assign_op() {
			return getRuleContext(Assign_opContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> SEMI_COL() { return getTokens(DecafParser.SEMI_COL); }
		public TerminalNode SEMI_COL(int i) {
			return getToken(DecafParser.SEMI_COL, i);
		}
		public Method_callContext method_call() {
			return getRuleContext(Method_callContext.class,0);
		}
		public TerminalNode RES_IF() { return getToken(DecafParser.RES_IF, 0); }
		public List<TerminalNode> L_PAREN() { return getTokens(DecafParser.L_PAREN); }
		public TerminalNode L_PAREN(int i) {
			return getToken(DecafParser.L_PAREN, i);
		}
		public TerminalNode R_PAREN() { return getToken(DecafParser.R_PAREN, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode RES_ELSE() { return getToken(DecafParser.RES_ELSE, 0); }
		public TerminalNode RES_FOR() { return getToken(DecafParser.RES_FOR, 0); }
		public List<TerminalNode> ID() { return getTokens(DecafParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DecafParser.ID, i);
		}
		public TerminalNode AS_OP() { return getToken(DecafParser.AS_OP, 0); }
		public Compound_assign_opContext compound_assign_op() {
			return getRuleContext(Compound_assign_opContext.class,0);
		}
		public TerminalNode RES_WHILE() { return getToken(DecafParser.RES_WHILE, 0); }
		public TerminalNode RES_RETURN() { return getToken(DecafParser.RES_RETURN, 0); }
		public TerminalNode RES_BREAK() { return getToken(DecafParser.RES_BREAK, 0); }
		public TerminalNode RES_CONTINUE() { return getToken(DecafParser.RES_CONTINUE, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				location();
				setState(128);
				assign_op();
				setState(129);
				expr();
				setState(130);
				match(SEMI_COL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				method_call();
				setState(133);
				match(SEMI_COL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				match(RES_IF);
				setState(136);
				match(L_PAREN);
				setState(137);
				expr();
				setState(138);
				match(R_PAREN);
				setState(139);
				block();
				setState(142);
				_la = _input.LA(1);
				if (_la==RES_ELSE) {
					{
					setState(140);
					match(RES_ELSE);
					setState(141);
					block();
					}
				}

				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				match(RES_FOR);
				setState(145);
				match(L_PAREN);
				setState(146);
				match(ID);
				setState(147);
				match(AS_OP);
				setState(148);
				expr();
				setState(149);
				match(SEMI_COL);
				setState(150);
				expr();
				setState(151);
				match(SEMI_COL);
				setState(152);
				match(ID);
				setState(153);
				compound_assign_op();
				setState(154);
				expr();
				setState(155);
				match(L_PAREN);
				setState(156);
				block();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				match(RES_WHILE);
				setState(159);
				match(L_PAREN);
				setState(160);
				expr();
				setState(161);
				match(R_PAREN);
				setState(162);
				block();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(164);
				match(RES_RETURN);
				setState(166);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << L_PAREN) | (1L << NOT_OP) | (1L << SUB_OP) | (1L << RES_SIZEOF) | (1L << BOOL) | (1L << CHAR) | (1L << INT) | (1L << ID))) != 0)) {
					{
					setState(165);
					expr();
					}
				}

				setState(168);
				match(SEMI_COL);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(169);
				match(RES_BREAK);
				setState(170);
				match(SEMI_COL);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(171);
				match(RES_CONTINUE);
				setState(172);
				match(SEMI_COL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_opContext extends ParserRuleContext {
		public TerminalNode AS_OP() { return getToken(DecafParser.AS_OP, 0); }
		public Compound_assign_opContext compound_assign_op() {
			return getRuleContext(Compound_assign_opContext.class,0);
		}
		public Assign_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterAssign_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitAssign_op(this);
		}
	}

	public final Assign_opContext assign_op() throws RecognitionException {
		Assign_opContext _localctx = new Assign_opContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_op);
		try {
			setState(177);
			switch (_input.LA(1)) {
			case AS_OP:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(AS_OP);
				}
				break;
			case ADD_AS_OP:
			case SUB_AS_OP:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				compound_assign_op();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Compound_assign_opContext extends ParserRuleContext {
		public TerminalNode ADD_AS_OP() { return getToken(DecafParser.ADD_AS_OP, 0); }
		public TerminalNode SUB_AS_OP() { return getToken(DecafParser.SUB_AS_OP, 0); }
		public Compound_assign_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_assign_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterCompound_assign_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitCompound_assign_op(this);
		}
	}

	public final Compound_assign_opContext compound_assign_op() throws RecognitionException {
		Compound_assign_opContext _localctx = new Compound_assign_opContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_compound_assign_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179);
			_la = _input.LA(1);
			if ( !(_la==ADD_AS_OP || _la==SUB_AS_OP) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_callContext extends ParserRuleContext {
		public Method_nameContext method_name() {
			return getRuleContext(Method_nameContext.class,0);
		}
		public TerminalNode L_PAREN() { return getToken(DecafParser.L_PAREN, 0); }
		public TerminalNode R_PAREN() { return getToken(DecafParser.R_PAREN, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DecafParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DecafParser.COMMA, i);
		}
		public List<Extern_argContext> extern_arg() {
			return getRuleContexts(Extern_argContext.class);
		}
		public Extern_argContext extern_arg(int i) {
			return getRuleContext(Extern_argContext.class,i);
		}
		public Method_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).enterMethod_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DecafParserListener ) ((DecafParserListener)listener).exitMethod_call(this);
		}
	}
